--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
+  },
+  "engine": {
+    "node": "11.2.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.18.3",
+    "dotenv": "6.2.0",
     "express": "4.16.4",
     "mongodb": "3.1.10",
     "mongoose": "5.3.14"
