Add DELETE /todos/:id

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "run:dev": "node server/server.js",
+    "run:prod": "NODE_ENV=production node server/server.js",
     "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
