--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "cross-env NODE_ENV=test mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
-  "engine": {
+  "engines": {
     "node": "11.2.0"
   },
   "author": "",
@@ -25,7 +25,7 @@
     "validator": "10.9.0"
   },
   "devDependencies": {
-    "expect": "1.20.2",
+    "expect": "23.6.0",
     "mocha": "5.2.0",
     "nodemon": "1.18.7",
     "supertest": "3.3.0"
